--- a/QuickBooking/appsettings.json
+++ b/QuickBooking/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=ep-shy-shadow-a2tlr3dn.eu-central-1.aws.neon.tech;Database=QuickBookingBD;User Id=QuickBookingBD_owner;Password=wezHJYick29I"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
