--- a/QuickBooking/appsettings.json
+++ b/QuickBooking/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Server=ep-shy-shadow-a2tlr3dn.eu-central-1.aws.neon.tech;Database=QuickBookingBD;User Id=QuickBookingBD_owner;Password=wezHJYick29I"
   },
   "Logging": {
     "LogLevel": {
